# CedarGraph

./: .clang-format  .dockerignore  .env  .env.production  .gitignore  .trivyignore  CEDAR_ARCHITECTURE.md  CHANGELOG.md  CHECKLIST.md  CMakeLists.txt  DEPLOYMENT_GUIDE.md  DISTRIBUTED_ANALYSIS.md  Dockerfile  Dockerfile.local  Dockerfile.simple  LICENSE  MULTI_RAFT_ARCHITECTURE.md  MULTI_RAFT_INTEGRATION_GUIDE.md  PRODUCTION_READINESS_AUDIT_2026-05-20.md  PRODUCTION_READINESS_AUDIT_2026-05-26.md  PRODUCTION_ROADMAP.md  PROJECT_SUMMARY.md  README.md  ROADMAP.md  SST_V2_IMPLEMENTATION.md  cedar_system_startup_plan.md  cedar_system_startup_report.md  check_queryd_integration.sh  deploy.sh  docker-compose.build.yml  docker-compose.minimal.yml  docker-compose.production.yml  docker-compose.scalable.yml  docker-compose.single.yml  docker-compose.yml  docker-entrypoint.sh  test_docker.sh  test_docker_performance.sh  test_queryd.sh  test_scaling_performance.sh  (+3 more)
examples/: CMakeLists.txt  dtx_example.cc  failover_demo.cc  multi_raft_example.cc  simple_example.cc
examples/partitioning/: dual_mode_example.cpp  dual_mode_integration_example.cpp
examples/queryd/: client_example.cpp
tests/: CMakeLists.txt  benchmark_temporal_graph.cc  test_2pc_optimized.cpp  test_async_query_benchmark.cc  test_auto_compaction_file_based.cc  test_auto_recovery_integration.cpp  test_backup_manager.cc  test_batch_neighbor_query.cc  test_cedar_basic_persistence.cc  test_cedar_graph_storage.cc  test_cedar_key.cc  test_cedar_key_enhanced.cc  test_cedar_key_roundtrip.cc  test_cedar_scan.cc  test_cedar_scan_simple.cc  test_cedar_scan_view.cc  test_cedar_update.cc  test_cedar_update_e2e.cc  test_cedar_update_persistence.cc  test_cedar_update_simple_e2e.cc  test_cedar_update_validation.cc  test_cedarscan_crash.cc  test_client.cc  test_column_filter_benchmark.cc  test_compaction_merger_v2.cc  test_cypher_validator.cc  test_debug_batch.cpp  test_debug_storage.cpp  test_descriptor.cc  test_descriptor_schema_version.cc  test_disabled_tests_documented.cc  test_distributed_fixed.cpp  test_distributed_performance.cpp  test_distributed_simple.cpp  test_distributed_write.cpp  test_docker_perf_benchmark.cpp  test_driver_transaction.cc  test_dtx_governance_integration.cpp  test_dual_mode_partition_strategy.cpp  test_dual_mode_partitioning.cpp  (+59 more)
tests/benchmark/: test_sharded_memtable.cc
tests/client/: test_graphd_load_balancer.cc
tests/cluster/: test_cluster_connection.cc  test_consistent_hash.cc  test_cross_dc_replication.cc  test_distributed_batch.cc  test_distributed_crud.cc  test_eventbus_integration.cc  test_failover.cc  test_failover_health_score.cc  test_health_monitoring.cc  test_partition_metadata_service.cc  test_partition_raft.cc  test_partition_raft_manager.cc  test_partition_router.cc  test_partition_storage_integration.cc  test_raft_propose_batch.cc  test_storage_integration.cc
tests/coordinator/: test_location_table.cc
tests/core/: test_env_posix.cc
tests/cypher/: CMakeLists.txt  test_concurrent_plan_execution.cc  test_cypher_execution.cc  test_distinct_no_collision.cc  test_execution_context_validation.cc  test_execution_operators.cc  test_explain_output.cc  test_expression_null_safety.cc  test_fingerprint.cc  test_graph_cypher_critical_batch.cc  test_index_scan.cc  test_merge_with_unwind_execution.cc  test_merge_with_unwind_parsing.cc  test_nodescan_real_data.cc  test_parameterized_queries.cc  test_parser.cc  test_plan_cache.cc  test_plan_cache_thread_safety.cc  test_planner.cc  test_planner_signature.cc  test_predicate_pushdown.cc  test_profile_output.cc  test_set_delete_parsing.cc  test_value_type_safety.cc  test_variable_length_expand.cc  test_where_clause.cc  test_write_operators.cc
tests/db/: test_compaction.cc  test_compaction_streaming.cc  test_manifest_compact.cc  test_manifest_replay.cc  test_memtable_iterator_race.cc  test_recursive_lock.cc  test_repair_db.cc  test_tombstone_flush.cc
tests/dtx/: CMakeLists.txt  decision_log_recovery_test.cc  failover_consensus_test.cc  test_2pc_pipeline_race.cc  test_2pc_recovery.cpp  test_2pc_thread_pool.cc  test_audit_export_safety.cc  test_braft_read_index.cc  test_cluster_initializer_registration.cc  test_dtx_raft_critical.cc  test_dtx_rpc_client_promise_safety.cc  test_failover_lock_order.cpp  test_failover_thread_bound.cc  test_hybrid_logical_clock.cc  test_jwt_json_parser.cc  test_meta_gcn_lease.cc  test_meta_gcn_rpc.cc  test_meta_service_gcn_cache.cc  test_meta_service_grpc.cc  test_meta_service_node_client_shutdown.cc  test_migration_checksum.cc  test_migration_checksum_verify.cc  test_migration_wal_catchup.cc  test_monitoring_shutdown.cc  test_optimized_temporal_thread_pool.cc  test_partial_commit_rollback.cc  test_participant_registry_cleanup.cc  test_partition_index_build.cc  test_partition_migration_end_to_end.cc  test_partition_storage_commit.cpp  test_register_participant.cc  test_rollback_replication.cc  test_rpc_thread_bound.cc  test_security_manager.cc  test_security_manager_jwt.cc  test_service_discovery_dns_safety.cc  test_storage_cdc_commit.cc  test_storage_cdc_rpc.cc  test_storage_client_pool_shutdown.cc  test_storage_client_retry_shutdown.cc  (+8 more)
tests/end_to_end/: test_2pc_cache_atomicity.cc  test_distributed_storage_api.cc  test_full_pipeline.cc  test_node_registration.cc
tests/gcn/: event_applier_backpressure_test.cc  event_applier_cv_test.cc  test_backpressure_controller.cc  test_coordinator_client.cc  test_cypher_gcn_routing.cc  test_end_to_end.cc  test_event_applier.cc  test_event_applier_offsets.cc  test_gcn_cdc_consumer.cc  test_gcn_checkpoint.cc  test_gcn_event_stream.cc  test_gcn_governance_critical.cc  test_gcn_lease_lifecycle.cc  test_gcn_node_cdc.cc  test_gcn_service.cc  test_gcn_version_gate.cc  test_gcn_watermark_safety.cc  test_local_compute_thread.cc  test_numa_arena.cc  test_query_dispatcher.cc  test_scatter_gather_router.cc  test_storage_backfill.cc  test_storage_cdc_client.cc  test_storage_extensions.cc  test_tmv_chunk.cc  test_tmv_edge.cc  test_tmv_engine.cc  test_tmv_engine_safety.cc  test_tmv_index.cc  (+2 more)
(+1590 files in other folders)
